gcc/testsuite/rust/rustc/ui/keyword/extern/keyword-extern-as-identifier-pat.rs
fn main() {
    let extern = 0; // { dg-error "" "" { target *-*-* } }
}

